k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bun-app
  labels:
    app: bun-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bun-app
  template:
    metadata:
      labels:
        app: bun-app
    spec:
      containers:
        - name: bun-app
          image: umershamshad/bun-app:latest  # Replace with your actual tag
          ports:
            - containerPort: 3000
